Deleted unnecessary files

--- a/vroom/appsettings.json
+++ b/vroom/appsettings.json
@@ -7,9 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  //Добавляем ConnectionString (web.config файл ASP MVC):
+  //Добавляем ConnectionString (как в web.config файл ASP MVC):
   "ConnectionStrings": {
     "Default": "server=localhost; database=vroomInit; integrated security=SSPI;"
-    //"Default": "server=localhost; database=vroom; integrated security=SSPI;"
   }
 }
